Grantee (List, Detail, Edit, Create) and Contact (List, Detail, Edit, Create) Complete

--- a/BASE/BASE.csproj
+++ b/BASE/BASE.csproj
@@ -144,6 +144,14 @@
     <Content Include="Screens\Admin\Role\Detail.aspx" />
     <Content Include="Screens\Admin\Role\Edit.aspx" />
     <Content Include="Screens\Admin\Role\List.aspx" />
+    <Content Include="Screens\Maintenance\Admin\Grantee\Edit.aspx" />
+    <Content Include="Screens\Maintenance\Admin\Grantee\Create.aspx" />
+    <Content Include="Screens\Maintenance\Admin\Grantee\Detail.aspx" />
+    <Content Include="Screens\Maintenance\Admin\Grantee\List.aspx" />
+    <Content Include="Screens\Maintenance\Lookup\Contact\Create.aspx" />
+    <Content Include="Screens\Maintenance\Lookup\Contact\Detail.aspx" />
+    <Content Include="Screens\Maintenance\Lookup\Contact\Edit.aspx" />
+    <Content Include="Screens\Maintenance\Lookup\Contact\List.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -281,6 +289,62 @@
     <Compile Include="Screens\Admin\Role\List.aspx.designer.cs">
       <DependentUpon>List.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Edit.aspx.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Edit.aspx.designer.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Create.aspx.cs">
+      <DependentUpon>Create.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Create.aspx.designer.cs">
+      <DependentUpon>Create.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Detail.aspx.cs">
+      <DependentUpon>Detail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\Detail.aspx.designer.cs">
+      <DependentUpon>Detail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\List.aspx.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Admin\Grantee\List.aspx.designer.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Create.aspx.cs">
+      <DependentUpon>Create.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Create.aspx.designer.cs">
+      <DependentUpon>Create.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Detail.aspx.cs">
+      <DependentUpon>Detail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Detail.aspx.designer.cs">
+      <DependentUpon>Detail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Edit.aspx.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\Edit.aspx.designer.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\List.aspx.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Screens\Maintenance\Lookup\Contact\List.aspx.designer.cs">
+      <DependentUpon>List.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -309,6 +373,18 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>SQL.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="tCommittee.cs">
+      <DependentUpon>SQL.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tContact.cs">
+      <DependentUpon>SQL.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tContactCommittee.cs">
+      <DependentUpon>SQL.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tGrantee.cs">
+      <DependentUpon>SQL.tt</DependentUpon>
     </Compile>
     <Compile Include="tPerson.cs">
       <DependentUpon>SQL.tt</DependentUpon>
