--- a/BASE/Web.config
+++ b/BASE/Web.config
@@ -48,7 +48,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="BASEDb" connectionString="Server=.\SQLEXPRESS; Database=OFFLINE_DATABASE; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-    <add name="SQLEntities" connectionString="metadata=res://*/SQL.csdl|res://*/SQL.ssdl|res://*/SQL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOMADKINS3DE7\SQLEXPRESS;initial catalog=OFFLINE_DATABASE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SQLEntities" connectionString="metadata=res://*/SQL.csdl|res://*/SQL.ssdl|res://*/SQL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=OFFLINE_DATABASE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
