--- a/BASE/BASE.csproj
+++ b/BASE/BASE.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit">
+      <HintPath>..\..\..\..\..\..\FILES\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -137,28 +140,9 @@
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Login.aspx" />
-    <Content Include="Screens\Admin\Person\Create.aspx" />
-    <Content Include="Screens\Admin\Person\Detail.aspx" />
-    <Content Include="Screens\Admin\Person\Edit.aspx" />
-    <Content Include="Screens\Admin\Person\List.aspx" />
-    <Content Include="Screens\Admin\Person\ManageRoles.aspx" />
-    <Content Include="Screens\Admin\Role\Create.aspx" />
-    <Content Include="Screens\Admin\Role\Detail.aspx" />
-    <Content Include="Screens\Admin\Role\Edit.aspx" />
-    <Content Include="Screens\Admin\Role\List.aspx" />
-    <Content Include="Screens\Maintenance\Committee\Create.aspx" />
-    <Content Include="Screens\Maintenance\Committee\Detail.aspx" />
-    <Content Include="Screens\Maintenance\Committee\Edit.aspx" />
-    <Content Include="Screens\Maintenance\Committee\List.aspx" />
-    <Content Include="Screens\Maintenance\Grantee\Edit.aspx" />
-    <Content Include="Screens\Maintenance\Grantee\Create.aspx" />
-    <Content Include="Screens\Maintenance\Grantee\Detail.aspx" />
-    <Content Include="Screens\Maintenance\Grantee\List.aspx" />
-    <Content Include="Screens\Maintenance\Contact\Create.aspx" />
-    <Content Include="Screens\Maintenance\Contact\Detail.aspx" />
-    <Content Include="Screens\Maintenance\Contact\Edit.aspx" />
-    <Content Include="Screens\Maintenance\Contact\List.aspx" />
-    <Content Include="Screens\Maintenance\Contact\ManageRoles.aspx" />
+    <Content Include="saving.gif" />
+    <Content Include="Screens\estimate.aspx" />
+    <Content Include="Screens\prices.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -199,7 +183,10 @@
       <LastGenOutput>SQL.cs</LastGenOutput>
     </Content>
     <Content Include="ViewSwitcher.ascx" />
-    <Content Include="Web.config" />
+    <Content Include="wait.gif" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
     <EntityDeploy Include="SQL.edmx">
@@ -233,159 +220,19 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screens\Admin\Person\Create.aspx.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
+    <Compile Include="Screens\estimate.aspx.cs">
+      <DependentUpon>estimate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Screens\Admin\Person\Create.aspx.designer.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
+    <Compile Include="Screens\estimate.aspx.designer.cs">
+      <DependentUpon>estimate.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Screens\Admin\Person\Detail.aspx.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
+    <Compile Include="Screens\prices.aspx.cs">
+      <DependentUpon>prices.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Screens\Admin\Person\Detail.aspx.designer.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\Edit.aspx.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\Edit.aspx.designer.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\List.aspx.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\List.aspx.designer.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\ManageRoles.aspx.cs">
-      <DependentUpon>ManageRoles.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Person\ManageRoles.aspx.designer.cs">
-      <DependentUpon>ManageRoles.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Create.aspx.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Create.aspx.designer.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Detail.aspx.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Detail.aspx.designer.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Edit.aspx.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\Edit.aspx.designer.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\List.aspx.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Admin\Role\List.aspx.designer.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Create.aspx.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Create.aspx.designer.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Detail.aspx.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Detail.aspx.designer.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Edit.aspx.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\Edit.aspx.designer.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\List.aspx.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Committee\List.aspx.designer.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Edit.aspx.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Edit.aspx.designer.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Create.aspx.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Create.aspx.designer.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Detail.aspx.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\Detail.aspx.designer.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\List.aspx.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Grantee\List.aspx.designer.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Create.aspx.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Create.aspx.designer.cs">
-      <DependentUpon>Create.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Detail.aspx.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Detail.aspx.designer.cs">
-      <DependentUpon>Detail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Edit.aspx.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\Edit.aspx.designer.cs">
-      <DependentUpon>Edit.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\List.aspx.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\List.aspx.designer.cs">
-      <DependentUpon>List.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\ManageRoles.aspx.cs">
-      <DependentUpon>ManageRoles.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Screens\Maintenance\Contact\ManageRoles.aspx.designer.cs">
-      <DependentUpon>ManageRoles.aspx</DependentUpon>
+    <Compile Include="Screens\prices.aspx.designer.cs">
+      <DependentUpon>prices.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -416,25 +263,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SQL.edmx</DependentUpon>
     </Compile>
-    <Compile Include="tCommittee.cs">
+    <Compile Include="tPrice.cs">
       <DependentUpon>SQL.tt</DependentUpon>
     </Compile>
-    <Compile Include="tContact.cs">
-      <DependentUpon>SQL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tContactCommittee.cs">
-      <DependentUpon>SQL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tGrantee.cs">
-      <DependentUpon>SQL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tPerson.cs">
-      <DependentUpon>SQL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tPersonRole.cs">
-      <DependentUpon>SQL.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tRole.cs">
+    <Compile Include="tPriceType.cs">
       <DependentUpon>SQL.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
@@ -447,6 +279,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Screens\Admin\" />
+    <Folder Include="Screens\Maintenance\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
