--- a/BASE/Web.config
+++ b/BASE/Web.config
@@ -8,6 +8,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <!-- Read more at: http://docs.telerik.com/devtools/aspnet-ajax/controls/asyncupload/security -->
+    <add key="Telerik.AsyncUpload.ConfigurationEncryptionKey" value="dsfgsdgdsfvsdfgdsfgsdg" />
+    <add key="Telerik.Upload.ConfigurationHashKey" value="jjhgjkghjkP" />
+    <add key="Telerik.Upload.AllowedCustomMetaDataTypes" value="Telerik.Web.UI.AsyncUploadConfiguration" />
+    <!-- Read more at:   http://docs.telerik.com/devtools/aspnet-ajax/controls/editor/functionality/dialogs/security -->
+    <add key="Telerik.Web.UI.DialogParametersEncryptionKey" value="YOsdfgsgtrP" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -19,7 +27,48 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    <httpHandlers>
+      <!-- This is the primary handler used to fetch most of the needed resources -->
+      <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false" />
+      <!-- Only needed for RadSpell and RadEditor's spell checking -->
+      <add path="Telerik.Web.UI.SpellCheckHandler.axd" type="Telerik.Web.UI.SpellCheckHandler" verb="*" validate="false" />
+      <!-- Only needed for the dialogs of RadEditor and RadSpell -->
+      <add path="Telerik.Web.UI.DialogHandler.aspx" type="Telerik.Web.UI.DialogHandler" verb="*" validate="false" />
+      <!-- Only needed if RadAsyncUpload, RadProgressArea/RadProgressManager or the obsolete RadUpload are used -->
+      <add path="Telerik.RadUploadProgressHandler.ashx" type="Telerik.Web.UI.RadUploadProgressHandler" verb="*" validate="false" />
+      <!-- Only needed if the obsolete RadChart is used -->
+      <add path="ChartImage.axd" type="Telerik.Web.UI.ChartHttpHandler" verb="*" validate="false" />
+    </httpHandlers>
   </system.web>
+  <system.webServer>
+    <!-- For IIS7+ and Integrated Pipeline mode -->
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <!-- Only needed if the obsolete RadUpload is used in the site -->
+      <!--    <remove name="RadUploadModule" /> -->
+      <!--    <add name="RadUploadModule" type="Telerik.Web.UI.RadUploadHttpModule" preCondition="integratedMode" /> -->
+      <!-- Only needed if RadCompression is used in the site. IIS7+ offers built-in dynamic content compression -->
+      <!--    <remove name="RadCompression" /> -->
+      <!--    <add name="RadCompression" type="Telerik.Web.UI.RadCompression" preCondition="integratedMode" /> -->
+    </modules>
+    <handlers>
+      <remove name="Telerik_Web_UI_WebResource_axd" />
+      <remove name="Telerik_Web_UI_SpellCheckHandler_axd" />
+      <remove name="Telerik_Web_UI_DialogHandler_aspx" />
+      <remove name="Telerik_RadUploadProgressHandler_ashx" />
+      <remove name="ChartImage_axd" />
+      <!-- This is the primary handler used to fetch most of the needed resources -->
+      <add name="Telerik_Web_UI_WebResource_axd" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" preCondition="integratedMode" />
+      <!-- Only needed for RadSpell and RadEditor's spell checking -->
+      <add name="Telerik_Web_UI_SpellCheckHandler_axd" path="Telerik.Web.UI.SpellCheckHandler.axd" type="Telerik.Web.UI.SpellCheckHandler" verb="*" preCondition="integratedMode" />
+      <!-- Only needed for the dialogs of RadEditor and RadSpell -->
+      <add name="Telerik_Web_UI_DialogHandler_aspx" path="Telerik.Web.UI.DialogHandler.aspx" type="Telerik.Web.UI.DialogHandler" verb="*" preCondition="integratedMode" />
+      <!-- Only needed if RadAsyncUpload, RadProgressArea/RadProgressManager or the obsolete RadUpload are used -->
+      <add name="Telerik_RadUploadProgressHandler_ashx" path="Telerik.RadUploadProgressHandler.ashx" type="Telerik.Web.UI.RadUploadProgressHandler" verb="*" preCondition="integratedMode" />
+      <!-- Only needed if the obsolete RadChart control is used -->
+      <add name="ChartImage_axd" path="ChartImage.axd" type="Telerik.Web.UI.ChartHttpHandler" verb="*" preCondition="integratedMode" />
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -47,8 +96,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="BASEDb" connectionString="Server=.\SQLEXPRESS; Database=OFFLINE_DATABASE; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-    <add name="SQLEntities" connectionString="metadata=res://*/SQL.csdl|res://*/SQL.ssdl|res://*/SQL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOMADKINS3DE7\SQLEXPRESS;initial catalog=OFFLINE_DATABASE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BASEDb" connectionString="Server=TOMADKINS3DE7\SQLEXPRESS; Database=BREWER; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="SQLEntities" connectionString="metadata=res://*/SQL.csdl|res://*/SQL.ssdl|res://*/SQL.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOMADKINS3DE7\SQLEXPRESS;initial catalog=BREWER;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
